--- a/docs/conventions/layouts.ipynb
+++ b/docs/conventions/layouts.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Layouts\n",
     "\n",
-    "A Layout in the context of this package describes the required tree-structure and multiple meta information of an HDF5 file. What and how exactly can be defined via a layout is outlined in [a later section.](#Write-an-individual-layout)\n",
+    "A Layout in the context of this package describes the required tree-structure and multiple meta information of an HDF5 file. What and how exactly can be defined via a layout is outlined in a later section.\n",
     "\n",
     "A layout essentially is a HDF itself and is used in combination with a another HDF5 file, e.g. one that contains measurement data. Specialized \"wrapper-HDF files\" in this package such as `File` or `H5PIV` come already with a pre-defined layout, which is already associated with it\n",
     "\n",
@@ -32,6 +32,13 @@
      "text": [
       " > EmptyLayout\n",
       " > TbxLayout\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-05_12:00:40,848 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -67,7 +74,15 @@
    "execution_count": 2,
    "id": "5beed51a-093a-4b79-b241-6f0e47e32a11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-05_12:00:42,609 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+     ]
+    }
+   ],
    "source": [
     "import h5rdmtoolbox as h5tbx"
    ]
@@ -82,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "4f3bf7f8-f8c4-4afe-bf7d-d44c3bb51804",
    "metadata": {},
    "outputs": [
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "3631b085-dbcd-418a-8e6e-cdc2b0065126",
    "metadata": {},
    "outputs": [
@@ -139,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "1b04b95b-ffd6-4f14-b820-9467b65b3c40",
    "metadata": {},
    "outputs": [
@@ -345,19 +360,19 @@
        "    background-color: rgba(3, 169, 244, .2);\r\n",
        "    cursor: pointer;\r\n",
        "}</style></head>\n",
-       "<p>H5FileLayout File \"EmptyLayout\"</p>\n",
+       "<p>H5FileLayout File \"tmp1\"</p>\n",
        "\n",
        "\n",
        "<div class='h5tb-warp'>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--17972264600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--17972264600\">\n",
+       "                        <input id=\"group-ds--7640111700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--7640111700\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\">\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox__ : __version of this package</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -376,7 +391,7 @@
        "<H5FileLayout with 0 issues>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "a83cd128-d178-41e8-8337-ecd08931411a",
    "metadata": {},
    "outputs": [
@@ -404,10 +419,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-31_13:14:48,284 ERROR    [layout.py:95] Attribute title missing in group /\n",
-      "2023-03-31_13:14:48,284 ERROR    [layout.py:95] Attribute title missing in group /\n",
-      "2023-03-31_13:14:48,287 ERROR    [layout.py:95] Attribute title missing in group /\n",
-      "2023-03-31_13:14:48,287 ERROR    [layout.py:95] Attribute title missing in group /\n"
+      "2023-04-05_12:00:42,935 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-04-05_12:00:42,935 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-04-05_12:00:42,938 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-04-05_12:00:42,938 ERROR    [layout.py:95] Attribute title missing in group /\n"
      ]
     },
     {
@@ -452,32 +467,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "d09573fd-92fb-4748-9313-9900ff697ba1",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp10409\\tmp2 with layout TbxLayout\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\da4323\\Anaconda3\\envs\\h5tbx\\lib\\runpy.py\", line 194, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"C:\\Users\\da4323\\Anaconda3\\envs\\h5tbx\\lib\\runpy.py\", line 87, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"C:\\Users\\da4323\\Anaconda3\\envs\\h5tbx\\Scripts\\h5tbx.exe\\__main__.py\", line 7, in <module>\n",
-      "  File \"C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\_cli.py\", line 200, in main\n",
-      "    h5lay = H5Layout.load_registered(args.layout, h5repr=None)\n",
-      "  File \"C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\layout.py\", line 360, in load_registered\n",
-      "    src_filename = H5Layout.find_registered_filename(name)\n",
-      "  File \"C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\layout.py\", line 352, in find_registered_filename\n",
-      "    raise FileNotFoundError(\n",
-      "FileNotFoundError: File \"File\" could not be found or passed name was not unique. Check the user layout dir C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\layouts\n"
+      "2023-04-05_12:00:45,300 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n",
+      "2023-04-05_12:00:45,360 ERROR    [layout.py:95] Attribute title missing in group /\n",
+      "2023-04-05_12:00:45,360 ERROR    [layout.py:95] Attribute title missing in group /\n"
      ]
     }
    ],
    "source": [
-    "! h5tbx layout -l File -c \"{filename}\""
+    "! h5tbx layout -l TbxLayout -c \"{filename}\""
    ]
   },
   {
@@ -494,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b49bd64f-9cb8-4bdd-872b-3613f864ef12",
    "metadata": {},
    "outputs": [],
@@ -514,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "e2ab957a-6584-4135-a602-7f48a67cc712",
    "metadata": {},
    "outputs": [
@@ -727,8 +739,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--21348637500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--21348637500\">\n",
+       "                        <input id=\"group-ds--10824680700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10824680700\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -751,7 +763,7 @@
        "<H5FileLayout with 0 issues>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "73fcfea4-0f75-4c59-b690-e410467cc3d7",
    "metadata": {},
    "outputs": [
@@ -787,8 +799,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-31_13:14:51,251 ERROR    [layout.py:95] Attribute type missing in group /\n",
-      "2023-03-31_13:14:51,251 ERROR    [layout.py:95] Attribute type missing in group /\n"
+      "2023-04-05_12:00:45,964 ERROR    [layout.py:95] Attribute type missing in group /\n",
+      "2023-04-05_12:00:45,964 ERROR    [layout.py:95] Attribute type missing in group /\n"
      ]
     },
     {
@@ -825,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "1f0fd70f-1a8f-4074-9f1b-bb2b33c6ecf1",
    "metadata": {},
    "outputs": [],
@@ -854,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "e8d7e000-ad6a-4b4d-a1da-3c0c6c224a01",
    "metadata": {},
    "outputs": [],
@@ -878,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "06f3e54a-50fe-43b9-94ed-6593eea03727",
    "metadata": {},
    "outputs": [
@@ -886,14 +898,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-31_13:14:52,568 ERROR    [layout.py:32] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
-      "2023-03-31_13:14:52,568 ERROR    [layout.py:32] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
-      "2023-03-31_13:14:52,570 ERROR    [layout.py:78] Neither of the attribute standard_name, long_name exist in /data\n",
-      "2023-03-31_13:14:52,570 ERROR    [layout.py:78] Neither of the attribute standard_name, long_name exist in /data\n",
-      "2023-03-31_13:14:52,574 ERROR    [layout.py:69] Base-units check failed for /data: kg != m\n",
-      "2023-03-31_13:14:52,574 ERROR    [layout.py:69] Base-units check failed for /data: kg != m\n",
-      "2023-03-31_13:14:52,577 ERROR    [layout.py:72] Attribute units missing in /x\n",
-      "2023-03-31_13:14:52,577 ERROR    [layout.py:72] Attribute units missing in /x\n"
+      "2023-04-05_12:00:46,11 ERROR    [layout.py:32] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
+      "2023-04-05_12:00:46,11 ERROR    [layout.py:32] Wrong shape of dataset /data: (20, 30) != (20, 32)\n",
+      "2023-04-05_12:00:46,13 ERROR    [layout.py:78] Neither of the attribute standard_name, long_name exist in /data\n",
+      "2023-04-05_12:00:46,13 ERROR    [layout.py:78] Neither of the attribute standard_name, long_name exist in /data\n",
+      "2023-04-05_12:00:46,17 ERROR    [layout.py:69] Base-units check failed for /data: kg != m\n",
+      "2023-04-05_12:00:46,17 ERROR    [layout.py:69] Base-units check failed for /data: kg != m\n",
+      "2023-04-05_12:00:46,20 ERROR    [layout.py:72] Attribute units missing in /x\n",
+      "2023-04-05_12:00:46,20 ERROR    [layout.py:72] Attribute units missing in /x\n"
      ]
     },
     {
