--- a/docs/conventions/tbx.ipynb
+++ b/docs/conventions/tbx.ipynb
@@ -8,11 +8,93 @@
     "# Toolbox Convention (\"tbx\")\n",
     "\n",
     "The default convention shipped with the `h5rdmtoolbox` is called \"tbx\" and is largely based on the CF Metadata Convention (https://cfconventions.org/).\n",
-    "At its core, so-called `standard_names` are defined for each relevant physical quantity. It is documented with its\n",
-    "canonical units and a comprehensive description in a versioned table available to all users. No credits are taken\n",
-    "for the following as everything is based on the CF Metadata Convention.\n",
-    "\n",
-    "> 💡 In the scope of this package, the convention is called \"cf-like\" because it does not incorporate all features of the CF Metadata Convention.\n"
+    "At its core, so-called `standard_names` are defined for each relevant physical quantity. It is documented with its canonical units and a comprehensive description in a versioned table available to all users. No credits are taken for standardized attributes taken from the CF Metadata Convention. However, some attributes are slightly modified or used differntly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "977b3767-0170-40b5-8d40-af531867a427",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import h5rdmtoolbox as h5tbx"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "212da025-1392-416f-bc9e-6ca862abe58f",
+   "metadata": {},
+   "source": [
+    "The following lists all standard attributes used as properties and used in methods:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "366bd955-3ee8-4c6a-97d1-9728cf1c8ae8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mConvention(tbx)\u001b[0m\n",
+       "\u001b[1m\n",
+       "> Properties\u001b[0m:\n",
+       "File:\n",
+       "    * title: TitleAttribute\n",
+       "    * institution: any_string\n",
+       "    * references: ReferencesAttribute\n",
+       "    * standard_name_table: StandardNameTableAttribute\n",
+       "    * comment: CommentAttribute\n",
+       "    * responsible_person: RespUserAttribute\n",
+       "Dataset:\n",
+       "    * standard_name_table: StandardNameTableAttribute\n",
+       "    * standard_name: StandardNameAttribute\n",
+       "    * units: UnitsAttribute\n",
+       "    * long_name: LongNameAttribute\n",
+       "    * comment: CommentAttribute\n",
+       "    * responsible_person: RespUserAttribute\n",
+       "    * source: SourceAttribute\n",
+       "Group:\n",
+       "    * standard_name_table: StandardNameTableAttribute\n",
+       "    * long_name: LongNameAttribute\n",
+       "    * comment: CommentAttribute\n",
+       "    * responsible_person: RespUserAttribute\u001b[1m\n",
+       "> Methods\u001b[0m:\n",
+       "  init_file:\n",
+       "    * title (opt=None)\n",
+       "    * institution (opt=None)\n",
+       "    * references (opt=None)\n",
+       "    * standard_name_table (opt=None)\n",
+       "    * comment (opt=None)\n",
+       "    * responsible_person (opt=None)\n",
+       "  create_group:\n",
+       "    * long_name (opt=None)\n",
+       "    * comment (opt=None)\n",
+       "    * responsible_person (opt=None)\n",
+       "  create_dataset:\n",
+       "    * standard_name\n",
+       "    * units\n",
+       "    * long_name\n",
+       "    * comment (opt=None)\n",
+       "    * responsible_person (opt=None)\n",
+       "    * source (opt=None)\n",
+       "  create_string_dataset:\n",
+       "    * long_name (opt=None)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h5tbx.conventions.registered_conventions['tbx']"
    ]
   },
   {
@@ -49,26 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "27b7e650-30ef-470f-a80d-6c936378f9db",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-04-04_22:45:57,361 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "<StandardName: x_wind [m/s] | SNT: None | desc: x wind component>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,17 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3026a8e2-ebf6-48aa-9bd6-9d915b9672d9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import h5rdmtoolbox as h5tbx\n",
-    "from h5rdmtoolbox import use\n",
-    "\n",
-    "use('tbx')"
+    "h5tbx.use('tbx')"
    ]
   },
   {
@@ -132,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "52a96fd3-318c-4e0a-8c57-82cfcb170480",
    "metadata": {
     "tags": []
@@ -179,20 +251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "310aa4c8-b49c-4103-89ab-ab5273c4bb29",
    "metadata": {
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\conventions\\standard_name.py:1195: UserWarning: No URL provided. Will save as dictionary.\n",
-      "  warnings.warn(f'No URL provided. Will save as dictionary.')\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -399,35 +463,35 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4777909000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4777909000\">\n",
+       "                        <input id=\"group-ds--48139709800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--48139709800\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : Test</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/method-4779769600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/method-4779774900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <ul id=\"ds-1-/method-48140546500\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-48140548800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
        "                <label class='h5tb-varname' \n",
-       "                for=\"ds-2-/method-4779774900\">method</label>: b'linear_interpolation'\n",
+       "                for=\"ds-2-/method-48140548800\">method</label>: b'linear_interpolation'\n",
        "                \n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-4780321000\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-4780325200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-4780325200\">u</label>\n",
+       "                <ul id=\"ds-1-/u-48140811900\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-48140814500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-48140814500\">u</label>\n",
        "                <span class=\"h5tb-dims\">1.2 (float64)</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-4782973000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/v-4782976000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/v-4782976000\">v</label>\n",
+       "                <ul id=\"ds-1-/v-48141472900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/v-48141475200\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/v-48141475200\">v</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
        "             italic\">standard_name : <StandardName: y_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
@@ -473,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "1ff26571-cb9d-46d4-bb29-4c0c6b14bc8b",
    "metadata": {
     "tags": []
@@ -515,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "39958f4f-607b-4f8f-a006-2a1612574c0a",
    "metadata": {
     "tags": []
@@ -727,8 +791,8 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4954849300\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4954849300\">\n",
+       "                        <input id=\"group-ds--4723245800\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4723245800\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -764,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "dfdb1240-99c2-4bf6-9a6d-17fd03b5eef0",
    "metadata": {},
    "outputs": [],
@@ -774,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "569b7ff4-5e17-4eda-9e8b-d449277f203e",
    "metadata": {
     "tags": []
@@ -786,7 +850,7 @@
        "Test_SNC (version number: 1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "77561296-edfe-476c-b316-553c1ff92cee",
    "metadata": {},
    "outputs": [
@@ -823,7 +887,7 @@
        "  'description': 'velocity is a vector quantity.'}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1c3230f1-2a0d-4b09-b885-3b6a8a16fe83",
    "metadata": {},
    "outputs": [
@@ -890,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "9e4ce9fe-de0e-4e3c-9410-e5dc891294af",
    "metadata": {
     "tags": []
@@ -932,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "7d29f972-b6c2-4a25-85cc-8d8c39f28154",
    "metadata": {
     "tags": []
@@ -957,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "d4e396b6-9564-4e39-aba8-0c8e9ebbef90",
    "metadata": {},
    "outputs": [
@@ -987,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "3fe3ac64-a900-407c-ac09-69ec7187a538",
    "metadata": {},
    "outputs": [
@@ -999,13 +1063,6 @@
       " > piv-v1\n",
       " > Test-v1\n",
       " > Test_SNC-v1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-04-04_22:46:00,691 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
      ]
     }
    ],
@@ -1025,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "be7625e3-349d-49bd-a14c-e9b2f220da91",
    "metadata": {
     "tags": []
@@ -1089,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "93b5a06b-ce63-4d94-852e-5c16e73458c7",
    "metadata": {
     "tags": []
@@ -1101,7 +1158,7 @@
        "<StandardName: x_velocity [m/s] | SNT: Test_SNC | desc: velocity is a vector quantity. x indicates the component in y-axis direction>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3cbe804a-0868-43c6-ae92-f813e4fed72a",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1179,7 @@
        "Test_SNC (version number: 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "f3861a50-33bc-4625-80d3-6ef95deeddf6",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "49060588-f59a-415b-b0ca-55afbf4f609a",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1270,7 @@
        "standard_name_table (version number: 79)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "b51e8fb3-e174-41e8-9737-c5ebf8fccb3d",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1292,7 @@
        "'standard_name_table-v79'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "24fcc5e1-6c7a-43ce-a370-47ebe5449ba5",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "ae55dbd6-af9a-4346-b232-b9f4fed3e436",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1392,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "7ef1281b-1b74-4143-b57e-299735526941",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1413,7 @@
        "'m/s'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "67174d49-18b5-4c47-af61-36e391f85eb0",
    "metadata": {},
    "outputs": [],
@@ -1380,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "6497fe45-cb00-4566-9031-4fdad221ccff",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1454,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "fbf33dbe-4453-482e-8cd9-2462bf7f81c0",
    "metadata": {},
    "outputs": [
@@ -1428,8 +1485,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-04_22:48:15,271 ERROR    [core.py:616] Could not set attributes {'standard_name': 'zenith_angle', 'units': 'K'} for dataset zenith angle 2\n",
-      "2023-04-04_22:48:15,271 ERROR    [core.py:616] Could not set attributes {'standard_name': 'zenith_angle', 'units': 'K'} for dataset zenith angle 2\n"
+      "2023-04-05_10:24:39,680 ERROR    [core.py:630] Could not set attributes {'standard_name': 'zenith_angle', 'units': 'K'} for dataset zenith angle 2\n",
+      "2023-04-05_10:24:39,680 ERROR    [core.py:630] Could not set attributes {'standard_name': 'zenith_angle', 'units': 'K'} for dataset zenith angle 2\n"
      ]
     },
     {
@@ -1451,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "id": "ef3f5cbe-4106-469c-a85d-d5517be154d8",
    "metadata": {},
    "outputs": [],
@@ -1469,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "id": "0fd0adab-2a27-456d-96bb-c3f07e9773f6",
    "metadata": {},
    "outputs": [],
@@ -1479,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "id": "ba85f48f-9c41-4a24-b267-c182ff400e2e",
    "metadata": {},
    "outputs": [
@@ -1487,14 +1544,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp3689\\tmp22.hdf\" with standard name table \"standard_name_table-v79\"\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-04-04_22:48:39,671 DEBUG    [__init__.py:35] changed logger level for h5rdmtoolbox from 20 to DEBUG\n"
+      " > Checking file \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp6672\\tmp8.hdf\" with standard name table \"standard_name_table-v79\"\n"
      ]
     }
    ],
