--- a/docs/database/Serverless.ipynb
+++ b/docs/database/Serverless.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ff22a40d-e700-4a1a-9402-f48f509dcf1d",
    "metadata": {
     "tags": []
@@ -24,7 +24,7 @@
     "import h5rdmtoolbox as h5tbx\n",
     "from h5rdmtoolbox import config\n",
     "\n",
-    "h5tbx.use('tbx')\n",
+    "h5tbx.use(None)\n",
     "\n",
     "from pprint import pprint"
    ]
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b221f7e9-e805-402c-8196-4ee099406c9a",
    "metadata": {},
    "outputs": [
@@ -249,39 +249,39 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--4763254700\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--4763254700\">\n",
+       "                        <input id=\"group-ds--42483293400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--42483293400\">\n",
        "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a9</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.4.0a1</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/velocity-4765250300\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/velocity-4765254600\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-4765254600\">velocity</label>\n",
-       "                    <span class=\"h5tb-dims\">(3) [int32]</span> [m/s]\n",
+       "                <ul id=\"ds-1-/velocity-42484875300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/velocity-42484877800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/velocity-42484877800\">velocity</label>\n",
+       "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-sub-4766618500\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-4766618500\">\n",
+       "                        <input id=\"group-ds-sub-42485089300\" type=\"checkbox\" >\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-42485089300\">\n",
        "                        sub<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/sub/velocity-4767230000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/sub/velocity-4767233900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/sub/velocity-4767233900\">velocity</label>\n",
-       "                    <span class=\"h5tb-dims\">(5) [int32]</span> [m/s]\n",
+       "                <ul id=\"ds-1-/sub/velocity-42485439500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/sub/velocity-42485441700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/sub/velocity-42485441700\">velocity</label>\n",
+       "                    <span class=\"h5tb-dims\">(5) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name : <StandardName: x_velocity [m/s] | SNT: None | desc: None></li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -301,9 +301,9 @@
    "source": [
     "with h5tbx.File() as h5:\n",
     "    h5.attrs['project'] = 'tutorial'\n",
-    "    h5.create_dataset('velocity', data=[1,2,-1], units='m/s', standard_name='x_velocity')\n",
+    "    h5.create_dataset('velocity', data=[1,2,-1], attrs=dict(units='m/s', standard_name='x_velocity'))\n",
     "    g = h5.create_group('sub')\n",
-    "    g.create_dataset('velocity', data=[4,0,-3,12,3], units='m/s', standard_name='x_velocity')\n",
+    "    g.create_dataset('velocity', data=[4,0,-3,12,3], attrs=dict(units='m/s', standard_name='x_velocity'))\n",
     "    h5.dump()\n",
     "    filename = h5.hdf_filename"
    ]
@@ -313,13 +313,13 @@
    "id": "722784a5-d90c-4785-9f57-b424ce3f9b0f",
    "metadata": {},
    "source": [
-    "### Find based on name/basename\n",
+    "## Find based on name/basename\n",
     "A `name` is the path within the file, the basename is the raw dataset or group name itself:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "410d8841-76f7-4db2-8c54-e7c67c46c79e",
    "metadata": {},
    "outputs": [
@@ -328,24 +328,24 @@
      "output_type": "stream",
      "text": [
       "find basename=velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">,\n",
-      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"h5py\">,\n",
+      " <HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">]\n",
       "\n",
       "find name=/velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"h5py\">]\n",
       "\n",
       "find name=/sub/velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">]\n",
       "\n",
       "find basename=velocity in sub/:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">]\n",
       "\n",
       "find basename=velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"h5py\">]\n",
       "\n",
       "find basename=velocity in root:\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">,\n",
-      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n"
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"h5py\">,\n",
+      " <HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">]\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "4c8a143b-6424-408b-8ad1-8569e0620f4b",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 wrapper group \"/sub\" (members: 1, convention: \"tbx\")>]\n"
+      "[<HDF5 wrapper group \"/sub\" (members: 1, convention: \"h5py\")>]\n"
      ]
     }
    ],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "b1f58db2-0660-40a5-8563-2370c31ecb92",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">\n"
+      "<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">\n"
      ]
     }
    ],
@@ -421,12 +421,12 @@
    "id": "b9fd4b9d-3479-4f15-80a1-228df20712c8",
    "metadata": {},
    "source": [
-    "### Find a dataset based on shape or dimension:"
+    "## Find a dataset based on shape or dimension:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "214dce12-b722-469b-b6d8-5412830c0ccb",
    "metadata": {},
    "outputs": [
@@ -434,9 +434,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">]\n",
-      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"tbx\">,\n",
-      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"tbx\">]\n"
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"h5py\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"h5py\">]\n"
      ]
     }
    ],
