--- a/docs/wrapper/Visualization.ipynb
+++ b/docs/wrapper/Visualization.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "As the return value of a sliced dataset is a `xarray.DataArray` instead of a `numpy.ndarray` plotting features of `xarray` is used. For more information about `xarray` see https://docs.xarray.dev/en/stable/\n",
     "\n",
-    "A a more experimental level, some HDF5 datasets or multiple HDF5 datasets as a tuple can be nicely 3D-rendered by the `ipyvolume` package, see [here](#Using-ipyvolume)"
+    "A a more experimental level, some HDF5 datasets or multiple HDF5 datasets as a tuple can be nicely 3D-rendered by the `ipyvolume` package, see last section"
    ]
   },
   {
